Release 1.2 (in development)
============================

Features added
--------------

* Builders: rebuild i18n target document when catalog updated.

Incompatible changes
--------------------

* PR#144, #1182: Force timezone offset to LocalTimeZone on POT-Creation-Date
  that was generated by gettext builder. Thanks to masklinn and Jakub Wilk.

Bugs fixed
----------

* #1173: Newest Jinja2 2.7 breaks Python version compatibilities because the
  Jinja2 2.7 drops support for Python 2.5, 3.1, 3.2. Thanks to Alexander Dupuy.
* #1160: Citation target missing cause AssertionError.
* #1157: Combination of 'globaltoc.html' and hidden toctree cause exception.
* Fix: 'make gettext' cause UnicodeDecodeError when templates contain utf-8
  encoded string.
* #1162, PR#139: singlehtml builder doesn't copy images to _images/.
* PR#141, #982: Avoid crash when writing PNG file using Python 3. Thanks to
  Marcin Wojdyr.
* PR#145: In parallel builds, sphinx drops second document file to write.
  Thanks to tychoish.
* #1188: sphinx-quickstart raises UnicodeEncodeError if "Project version"
  includes non-ASCII characters.
* #1189: "Title underline is short" WARNING is given when using fullwidth
  characters to "Project name" on quickstart.
* #1190: Output TeX/texinfo/man filename has no basename (only extention)
  when using multibyte characters to "Project name" on quickstart.
* #1090: Fix i18n: multiple cross references (term, ref, doc) in the same line
  return the same link.
* #1193: Fix i18n: multiple link references in the same line return the same
  link.
* #1176: Fix i18n: footnote reference number missing for auto numbered named
  footnote and auto symbol footnote.
* PR#146,#1172: Fix ZeroDivisionError in Parallel Builds. Thanks to tychoish.
* #1206: Fix i18n: gettext did not translate admonition directive's title.


Release 1.2 (beta1 released Mar 31, 2013)
=========================================

Incompatible changes
--------------------
