@@ -51,7 +51,8 @@ class ManualPageBuilder(Builder):
         docwriter = ManualPageWriter(self)
         docsettings = OptionParser(
             defaults=self.env.settings,
-            components=(docwriter,)).get_default_values()
+            components=(docwriter,),
+            read_config_files=True).get_default_values()
 
         self.info(bold('writing... '), nonl=True)
 
